Fixed landing Page alignment. Comments changes in index.html and one line change in index.css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  display: block; /** Changed display to fix alignment **/
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
